# uai

./: Cargo.toml  Makefile  README.md  imports.json
cmd/: cli.ts  invoice.ts
entities/: invoice.ts
services/: invoice.ts
src/: history.rs  main.rs  openai.rs
