[package]
name = "uai"
version = "0.1.0"
authors = ["Marco Antônio <marco@tremtec.com>"]
description = "A plugabble command-line interface for OpenAI API"
edition = "2021"
license = "MIT"

[dependencies]
const_env = "0.1.2"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["rt", "full"] }
